Done: Added share functionality on long press for first button To Do: Implement share function To Do: Refactcor after Step one

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="sound1">sound1</string>
     <string name="sound2">sound2</string>
+    <string name="share">share</string>
 </resources>
