--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">SacredGamesSoundBoard</string>
     <string name="action_settings">Settings</string>
-    <string name="sound1">sound1</string>
-    <string name="sound2">sound2</string>
     <string name="share">share</string>
-</resources>
+<string name="sound1">aaja_aaja_muh_mein</string>
+    <string name="sound2">aur_thodi_der_mei_aa_jata</string>
+    <string name="sound3">bas_itna_hi_bc</string>
+    <string name="sound4">bhagwan_ko_l_farak_ni_padta</string>
+    <string name="sound5">intro_theme</string>
+    <string name="sound6">jaa_k_dekh_record_mein</string>
+    <string name="sound7">l_chhota_h</string>
+    <string name="sound8">marna_hai_kya_bsdk</string>
+    <string name="sound9">sambhal_isko_apne</string>
+    <string name="sound10">tere_ko_kya_lagta_h_main</string>
+    <string name="sound11">teri_maa_star_baap_star</string>
+    </resources>
