Adding more audio files, updating content_scrolling.xml and strings.xml correspondingly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,48 @@
     <string name="app_name">SacredGamesSoundBoard</string>
     <string name="action_settings">Settings</string>
     <string name="share">Share</string>
-<string name="sound1">aaja_aaja_muh_mein</string>
-    <string name="sound2">aur_thodi_der_mei_aa_jata</string>
-    <string name="sound3">bas_itna_hi_bc</string>
-    <string name="sound4">bhagwan_ko_l_farak_ni_padta</string>
-    <string name="sound5">intro_theme</string>
-    <string name="sound6">jaa_k_dekh_record_mein</string>
-    <string name="sound7">l_chhota_h</string>
-    <string name="sound8">marna_hai_kya_bsdk</string>
-    <string name="sound9">sambhal_isko_apne</string>
-    <string name="sound10">tere_ko_kya_lagta_h_main</string>
-    <string name="sound11">teri_maa_star_baap_star</string>
+
+    <string name="sound1">aadmi_andar_se_kala</string>
+    <string name="sound2">aedi_hai_kya</string>
+    <string name="sound3">ae_rbaaz</string>
+    <string name="sound4">ae_rbaaz_long</string>
+    <string name="sound5">ambulance_par_charcha</string>
+    <string name="sound6">apni_bhi_phat_gyi</string>
+    <string name="sound7">apni_g_khol_k_dekh</string>
+    <string name="sound8">asli_dhanda_hai_politics</string>
+    <string name="sound9">atapi_vatapi</string>
+    <string name="sound10">bas_itna_hi</string>
+    <string name="sound11">bc_teri_aukat_h_scent</string>
+    <string name="sound12">bhagwan_ko_l_farak_ni_padta</string>
+    <string name="sound13">bola_tha_na_vaapis_aaoge</string>
+    <string name="sound14">bol_na_mc_kaun_h</string>
+    <string name="sound15">bunty_koi_bolta_tha_tharki</string>
+    <string name="sound16">bunty_to_c_h</string>
+    <string name="sound17">cassette_mera_main_sunega</string>
+    <string name="sound18">chaku_above_everything</string>
+    <string name="sound19">ch_hat</string>
+    <string name="sound20">dekh_c</string>
+    <string name="sound21">dekh_lega_tereko_mc</string>
+    <string name="sound22">dharam_ka_bazaar</string>
+    <string name="sound23">h_ek_harami</string>
+    <string name="sound24">khada_bhi_hota_uska</string>
+    <string name="sound25">life_mei_pehli_baar_dimaag_ka</string>
+    <string name="sound26">l_chhota_h</string>
+    <string name="sound27">maa_k_gya_offer</string>
+    <string name="sound28">madarchh_sadele_lun</string>
+    <string name="sound29">mera_baap_sabki_g_maarne_wala_h</string>
+    <string name="sound30">mukti_dede</string>
+    <string name="sound31">naya_dharam_maangta_tha</string>
+    <string name="sound32">paise_ke_naam_pe_aisa_dosti</string>
+    <string name="sound33">parulkar_ki_g_se_bahr</string>
+    <string name="sound34">pichli_baar_bola_aukat</string>
+    <string name="sound35">saif_bc</string>
+    <string name="sound36">saif_bc_2</string>
+    <string name="sound37">sala_suar</string>
+    <string name="sound38">taboot_ka_jawaab</string>
+    <string name="sound39">tere_g_mei_chhatri</string>
+    <string name="sound40">tere_g_mei_chhatri_short</string>
+    <string name="sound41">teri_maa_r_baap_c</string>
+    <string name="sound42">tumhare_is_c_mei_mera</string>
+    <string name="sound43">umar_ka_challange</string>
     </resources>
