Resolved permission issue for write external storage!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,5 @@
     <string name="sound40">tere_g_mei_chhatri_short</string>
     <string name="sound41">teri_maa_r_baap_c</string>
     <string name="sound42">tumhare_is_c_mei_mera</string>
-    <string name="sound43">umar_ka_challange</string>
+    <string name="sound43">umar_ka_challenge</string>
     </resources>
