Resolved permission issue for write external storage!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">SGSB</string>
+    <string name="app_name">SGS</string>
     <string name="action_settings">Settings</string>
     <string name="share">Share</string>
 
